--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
 
         <nav class="space-y-4">
-            <button class="w-full py-4 text-xl font-bold rounded-xl shadow-lg transition-transform active:scale-95 bg-gray-800 hover:bg-gray-700 border border-emerald-500/50">
-                図鑑を開く
+            <button onclick="location.href='register.html'" class="w-full py-4 text-xl font-bold bg-gray-800 border border-emerald-500/50 rounded-2xl hover:bg-gray-700 transition-all active:scale-95">
+                図鑑に登録する
             </button>
             
             <!-- 知的なエメラルドグリーンの規約ボタン -->
