--- a/register.html
+++ b/register.html
@@ -42,12 +42,12 @@
 
         <!-- Analysis execution button -->
         <button onclick="analyzeHuman()" class="w-full py-4 bg-emerald-600 hover:bg-emerald-500 text-white font-bold rounded-xl shadow-lg transition-all active:scale-95">
-            Let me analyze (execute)
+            解析（攻略アドバイス）を開始する
         </button>
     </main>
 
     <script>
-        const tags = ["Volume bug", "Summary prohibited", "Straightforward punch", "Weak to low pressure", "Flattery weakness", "Starvation runaway", "Rare character", "Battery out"];
+        const tags = ["音量バグ", "要約禁止", "正論パンチ", "低気圧に弱い", "褒め殺し弱点", "空腹暴走", "レアキャラ", "充電切れ","夜行性","社交的","内向的","感情豊か","クール","天然","ツンデレ","マイペース","せっかち","のんびり屋"];
         const selectedTags = new Set();
 
         const container = document.getElementById('tag-container');
