--- a/register.html
+++ b/register.html
@@ -3,58 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Registration | Guide to Humans</title>
+    <title>個体登録 | Guide to Humans</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #0d1117; color: #e6edf3; }
         .emerald-border { border-color: #10b981; }
-        .tag-selected { background-color: #10b981; color: white; }
+        .tag-selected { background-color: #10b981; color: white; border-color: #10b981; }
     </style>
 </head>
 <body class="p-6 max-w-md mx-auto">
     <header class="mb-8 flex items-center gap-4">
-        <button onclick="location.href='index.html'" class="text-emerald-400">←Return</button>
-        <h2 class="text-xl font-bold">Registration of new species</h2>
+        <button onclick="location.href='index.html'" class="text-emerald-400 font-bold">← 戻る</button>
+        <h2 class="text-xl font-bold">新種個体の登録</h2>
     </header>
 
     <main class="space-y-6">
-        <!-- Nickname -->
+        <!-- ニックネーム -->
         <section>
-            <label class="block text-sm font-medium text-emerald-400 mb-2">Individual nickname</label>
-            <input type="text" id="nickname" placeholder="Example: Morning grumpy minister"
-                class="w-full bg-gray-900 border emerald-border rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-emerald-500">
+            <label class="block text-sm font-medium text-emerald-400 mb-2">個体のニックネーム</label>
+            <input type="text" id="nickname" placeholder="例：朝の機嫌が悪い大臣"
+                class="w-full bg-gray-900 border emerald-border rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-emerald-500 placeholder-gray-600">
         </section>
 
-        <!-- Attribute tags (selectable) -->
+        <!-- 属性タグ -->
         <section>
-            <label class="block text-sm font-medium text-emerald-400 mb-2">Detected attributes (multiple possible)</label>
+            <label class="block text-sm font-medium text-emerald-400 mb-2">検知された属性（複数選択可）</label>
             <div id="tag-container" class="flex flex-wrap gap-2">
-                <!-- Generate tags with JavaScript -->
+                <!-- JavaScriptでタグを生成 -->
             </div>
         </section>
 
-        <!-- Action episode -->
+        <!-- エピソード -->
         <section>
-            <label class="block text-sm font-medium text-emerald-400 mb-2">Specific bug (action) episodes</label>
-            <textarea id="episode" rows="4" placeholder="Describe when and what bugs occurred..."
-                class="w-full bg-gray-900 border emerald-border rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-emerald-500"></textarea>
+            <label class="block text-sm font-medium text-emerald-400 mb-2">具体的なバグ（行動）エピソード</label>
+            <textarea id="episode" rows="4" placeholder="いつ、どんなバグが発生したか記述せよ..."
+                class="w-full bg-gray-900 border emerald-border rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-emerald-500 placeholder-gray-600"></textarea>
         </section>
 
-        <!-- Analysis execution button -->
-        <button onclick="analyzeHuman()" class="w-full py-4 bg-emerald-600 hover:bg-emerald-500 text-white font-bold rounded-xl shadow-lg transition-all active:scale-95">
+        <!-- 解析ボタン -->
+        <button onclick="analyzeHuman()" class="w-full py-4 bg-emerald-600 hover:bg-emerald-500 text-white font-bold rounded-xl shadow-lg transition-all active:scale-95 text-lg">
             解析（攻略アドバイス）を開始する
         </button>
     </main>
 
     <script>
-        const tags = ["音量バグ", "要約禁止", "正論パンチ", "低気圧に弱い", "褒め殺し弱点", "空腹暴走", "レアキャラ", "充電切れ","夜行性","社交的","内向的","感情豊か","クール","天然","ツンデレ","マイペース","せっかち","のんびり屋"];
+        const tags = ["音量バグ", "要約禁止", "正論パンチ", "低気圧に弱い", "褒め殺し弱点", "空腹暴走", "レアキャラ", "充電切れ", "夜行性", "社交的", "内向的", "感情豊か", "クール", "天然", "ツンデレ", "マイペース", "せっかち", "のんびり屋"];
         const selectedTags = new Set();
 
         const container = document.getElementById('tag-container');
         tags.forEach(tag => {
             const btn = document.createElement('button');
             btn.textContent = tag;
-            btn.className = "px-3 py-1 rounded-full border border-emerald-500/50 text-xs transition-colors";
+            btn.className = "px-3 py-1.5 rounded-full border border-emerald-500/50 text-xs transition-colors hover:border-emerald-500";
             btn.onclick = () => {
                 btn.classList.toggle('tag-selected');
                 selectedTags.has(tag) ? selectedTags.delete(tag) : selectedTags.add(tag);
@@ -63,14 +63,11 @@
         });
 
         function analyzeHuman() {
-            const data = {
-                nickname: document.getElementById('nickname').value,
-                tags: Array.from(selectedTags),
-                episode: document.getElementById('episode.value')
-            };
-            console.log("Analysis data transmission preparation complete:", data);
-            // Transition to the analysis result screen (result.html) here!
-            alert("I will start the analysis circuit! Please wait a moment...");
+            const nickname = document.getElementById('nickname').value;
+            if(!nickname) return alert("ニックネームを入力したまえ！");
+            
+            alert("解析回路を起動しますぞ！少々お待ちを...");
+            location.href = 'result.html'; 
         }
     </script>
 </body>
