--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <button onclick="location.href='register.html'" class="w-full py-4 text-xl font-bold bg-gray-800 border border-emerald-500/50 rounded-2xl hover:bg-gray-700 transition-all active:scale-95">
                 図鑑に登録する
             </button>
+            <button onclick="location.href='collection.html'" class="w-full py-3 text-sm font-bold text-emerald-400 bg-gray-900 border border-emerald-500/20 rounded-xl">
+        図鑑リストを見る
+    </button>
             
             <!-- 知的なエメラルドグリーンの規約ボタン -->
             <button onclick="location.href='about.html'" class="w-full py-3 text-sm font-medium rounded-xl transition-all emerald-gradient hover:brightness-110 shadow-lg shadow-emerald-900/20">
