--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="text-4xl font-bold mb-2 tracking-wider">Guide to Humans</h1>
         <p class="text-emerald-400 text-lg">〜分からないから、探りたい！〜</p>
     </header>
-
+<main>
     <main class="w-full max-w-md">
     <div class="relative w-48 h-48 mx-auto mb-8 rounded-full border-2 border-emerald-500/30 overflow-hidden shadow-[0_0_20px_rgba(16,185,129,0.2)]">
         <img src="main-visual.png" alt="人間攻略・観察図鑑" class="w-full h-full object-cover">
