--- a/result.html
+++ b/result.html
@@ -57,153 +57,139 @@
     <script>
     // 前の画面（register.html）からデータを受け取る（本来はlocalStorageなどを使用）
     // 今回はデモとして、ランダムに選ばれたタグに応じた回答を生成するロジックですな
+
+    // --- 1. 人間属性データベース（全50種・完全補完！） ---
+const adviceDatabase = {
+    // 通信OS系
+    "要約禁止": { first: "迷宮のような話術の持ち主ですな。", hint: "結論を急かさず、脳内で『今日の献立』でも考えながら聞くのが吉ですぞ。", obs: "話が脱線してから戻るまでのタイムを計測したまえ。" },
+    "音量バグ": { first: "鼓膜の予備が必要な個体ですな！", hint: "物理的な距離を50cmとるか、心の音量ノブを左に回したまえ。", obs: "どの単語でボリュームが跳ね上がるか、トリガーを特定せよ。" },
+    "正論パンチ": { first: "高火力な正論アタッカーですな！", hint: "正論は『正しい』が『楽しく』はないもの。教科書だと思って聞き流したまえ。", obs: "正論を放つ時の『ドヤ顔』の角度を観察せよ。" },
+    "主語喪失": { first: "高度な暗号通信を行う個体ですな。", hint: "「あれ」の内容を前後の文脈から推測する、高度なデコード能力が試されますぞ。", obs: "一回の会話で何回「あれ」と言ったかカウントせよ。" },
+    "既読スルー仕様": { first: "返信という概念が薄い個体ですな。", hint: "見て満足するタイプです。返事が必要な時は『要返信』とパケットに明記せよ。", obs: "何日後に返信が来るか、生存確認の間隔を記録せよ。" },
+    "話泥棒": { first: "全ての話題を自分に吸い込むブラックホール個体ですな。", hint: "「へぇー！」と相槌を打ちつつ、自分の話に戻そうとせず諦めるのが平和のコツですな。", obs: "会話を奪い取る時の『接続詞』を特定せよ。" },
+    "オウム返し": { first: "自分の意見を隠蔽する反射型個体ですな。", hint: "相手が何を考えているか探るより、自分の意見を肯定されていると思い込みたまえ。", obs: "何回連続でオウム返しができるか、限界に挑戦せよ。" },
+    "独り言モード": { first: "脳内思考が常に漏れ出している個体ですな。", hint: "返信が必要な通信か、単なる排熱処理かを見極めるのが重要ですぞ。", obs: "独り言の内容が、何分後に現実の行動に繋がるか予測せよ。" },
+    "遠回しプロトコル": { first: "本音をオブラートに包みすぎて見えない個体ですな。", hint: "察してちゃんですぞ。推理ゲームだと思って、裏の意図を楽しみたまえ。", obs: "本音に辿り着くまでに必要な質問回数を計測せよ。" },
+    "沈黙の壁": { first: "強力なファイアウォールを搭載した個体ですな。", hint: "無理にこじ開けず、同じ空間にいるだけで接続完了と見なしたまえ。", obs: "沈黙中に視線がどこを向いているか、演算内容を推測せよ。" },
     
-    const adviceDatabase = {
-    "音量バグ": {
-        first: "おやおや、鼓膜の予備が必要な個体ですな！",
-        hint: "相手の声が大きくなった時は、心のボリュームノブを左に回したまえ。物理的な距離を50cmとるのも有効ですぞ。",
-        obs: "どんな単語を口にした時に音量が跳ね上がるか、トリガーを特定できれば君の勝ちですぞ。"
-    },
-    "要約禁止": {
-        first: "話の終わりが見えない、迷宮のような個体ですな。",
-        hint: "話を聞きながら、心の中で『今日の献立』を考える並列処理スキルを磨きたまえ。相槌のタイミングだけは外さないのがコツですな。",
-        obs: "話が脱線してから元に戻るまでの時間を計測したまえ。新記録が出れば拍手ですぞ。"
-    },
-    "正論パンチ": {
-        first: "ぐうの音も出ない正論を放つ、高火力な個体ですな！",
-        hint: "正論は『正しい』だけで『楽しい』とは限りませんぞ。まともに食らわず、『教科書のような意見ですな！』と横にかわしたまえ。",
-        obs: "相手が正論を言っている時の『ドヤ顔』の角度を観察したまえ。45度が標準ですぞ。"
-    },
-    "低気圧に弱い": {
-        first: "空模様と心模様がリンクしている、繊細な個体ですな。",
-        hint: "雨の日は『システムの動作が重い日』と割り切りたまえ。無理に動かそうとせず、遠くから見守るのが一流のエンジニアですな。",
-        obs: "気圧計と相手の機嫌の相関グラフを作ってみたまえ。天気予報より当たるかもしれんぞ。"
-    },
-    "褒め殺し弱点": {
-        first: "称賛を浴びると、全ての防壁が崩壊する素直な個体ですな。",
-        hint: "何かをお願いしたい時は、まず相手の靴の輝きや、ペンの持ち方を褒めたまえ。OSが驚くほど滑らかに動くはずですぞ。",
-        obs: "褒められた時に、照れ隠しでどんな不自然な動きをするか、その『挙動』を記録したまえ。"
-    },
-    "空腹暴走": {
-        first: "エネルギー残量に機嫌が左右される、燃費の悪い個体ですな。",
-        hint: "この個体が牙を剥いたら、それは攻撃ではなく『給油サイン』ですぞ。何かを食べさせるまで、重要な話は厳禁ですな。",
-        obs: "お腹が鳴ってから怒り出すまでの『カウントダウン時間』を測定したまえ。"
-    },
-    "レアキャラ": {
-        first: "出現率が極めて低い、伝説級の個体を発見されましたな！",
-        hint: "無理に捕獲（会話）しようとせず、遠くからその生態を拝むのがマナーですな。出会えただけで、今日の君の運勢は最高ですぞ。",
-        obs: "次に現れる場所を予想したまえ。予測が当たれば君もレアキャラの仲間入りですな。"
-    },
-    "充電切れ": {
-        first: "夕方になるとシステムがダウンする、分かりやすい個体ですな。",
-        hint: "電池残量が赤い時は、思考回路がショートしています。難しい話は避け、そっとシャットダウン（帰宅）させてあげたまえ。",
-        obs: "あくびが3回続いたら『残り1%』の合図ですな。見逃してはいけませんぞ。"
-    },
-    "ツンデレ": {
-        first: "表面の冷気と内側の熱気が矛盾している、高難度な個体ですな。",
-        hint: "厳しい言葉は『挨拶』、その後のわずかな沈黙が『本音』ですな。言葉の額面通りに受け取らない高度な翻訳スキルが試されますぞ。",
-        obs: "突き放した後に、こっそりこちらを気にしている『視線のバグ』を検知したまえ。"
-    },
-    "マイペース": {
-        first: "自分専用の時計で生きている、独立独歩な個体ですな。",
-        hint: "君の時計に合わせようとすると、君のシステムが故障しますぞ。『あちらは別の時間軸にいるのだ』と割り切って、流れに身を任せたまえ。",
-        obs: "周囲がパニックになっている時に、その個体だけがどれほど落ち着いているか、その温度差を楽しみたまえ。"
-    },
-    "夜行性": {
-        first: "太陽が沈んでからシステムが最適化される、月光駆動型の個体ですな。",
-        hint: "午前中のその個体は『スリープモード』ですぞ。重要なミッションは、日が暮れてエンジンの回転が上がってから依頼したまえ。",
-        obs: "午後8時を過ぎた瞬間に、目の輝きがどれほど増すか。その『起動スイッチ』を特定したまえ。"
-    },
-    "社交的": {
-        first: "周囲のネットワークと常時接続されている、高出力な通信型個体ですな！",
-        hint: "情報の拡散スピードが速いですぞ。秘密のデータは、暗号化（内緒話）して伝えるより、そもそも入力しないのが安全ですな。",
-        obs: "一度に何人の個体と同時並行で通信（会話）できるか。その『最大同時接続数』を計測したまえ。"
-    },
-    "内向的": {
-        first: "内部サーバーで深い演算を行っている、静かなるプロセッサ個体ですな。",
-        hint: "返信が遅いのはフリーズしているのではなく、最高の回答を『構築中』なのですな。再起動（急かすこと）をせず、じっくり待つのがマナーですぞ。",
-        obs: "一言発した後の、安堵のため息。そのわずかな『排熱処理』を見逃してはいけませんな。"
-    },
-    "感情豊か": {
-        first: "喜怒哀楽の振れ幅がダイナミックな、高解像度モニターのような個体ですな！",
-        hint: "言葉の内容よりも、その時の『色（表情）』を見たほうが正確なデータが取れますぞ。今は『嵐モード』だと思えば、雷が落ちても怖くありませんな。",
-        obs: "笑いながら泣くといった、高度な『マルチレイヤー表示』が起きていないか観察したまえ。"
-    },
-    "クール": {
-        first: "常に冷却システムが作動している、氷結仕様の個体ですな。",
-        hint: "冷たく見えるのは『安定動作』の証ですぞ。無理に熱くさせようとせず、その静寂な空間を共有するだけで、君の知性も研ぎ澄まされるはずですな。",
-        obs: "そんな個体が、ふとした瞬間に見せる『0.1秒の微笑み』。これこそがこの図鑑の激レアデータですぞ！"
-    },
-    "天然": {
-        first: "常識のプロトコルを無視して動く、独自のOSを搭載した個体ですな！",
-        hint: "予測不可能な挙動こそがこの個体の『正常動作』ですぞ。『なんでそうなる！？』とツッコむのではなく、『そうきたか！』と楽しむのが正解ですな。",
-        obs: "言い間違いや勘違いが、奇跡的に正解へ繋がる瞬間。その『バグの芸術』を記録したまえ。"
-    },
-    "せっかち": {
-        first: "クロック周波数が異常に高い、超高速処理型の個体ですな！",
-        hint: "この個体の前では、結論から話すのが鉄則ですな。前置きが長いと、相手のシステムがタイムアウト（イライラ）を起こしますぞ。",
-        obs: "エレベーターの『閉』ボタンを連打する回数を数えたまえ。その速さが個体の戦闘力ですな。"
-    },
-    "のんびり屋": {
-        first: "時間の流れを独自に減速させている、省エネ特化型の個体ですな。",
-        hint: "急かしても加速はしません。むしろ、君がその個体のゆったりしたリズムに同期してみたまえ。世界が平和に見えてくる魔法のバグですな。",
-        obs: "周囲が走っている中で、その個体だけがどれほど優雅に歩いているか。その『時間軸のズレ』を楽しみたまえ。"
-    }
+    // 動作OS系
+    "空腹暴走": { first: "低燃費で機嫌が不安定な個体ですな。", hint: "牙を剥いたらそれは『給油サイン』です。何か食べさせるまで重要案件は禁止ですぞ。", obs: "お腹が鳴ってから怒り出すまでの秒数を数えたまえ。" },
+    "充電切れ": { first: "夕方になるとシステムダウンする個体ですな。", hint: "電池残量が赤い時は思考停止しています。そっとシャットダウン（帰宅）させたまえ。", obs: "あくび3回が『残り1%』の合図。見逃してはいけませんぞ。" },
+    "低気圧に弱い": { first: "空模様と心模様が同期している個体ですな。", hint: "雨の日は『動作が重い日』と割り切り、遠くから見守るのが一流のエンジニアですな。", obs: "気圧計と機嫌の相関グラフを作ってみたまえ。" },
+    "夜行性": { first: "月光駆動型の高出力個体ですな！", hint: "午前中のその個体は『スリープモード』です。大事な話は日が暮れてから依頼せよ。", obs: "午後8時を過ぎた瞬間の目の輝きをチェックせよ。" },
+    "せっかち": { first: "クロック周波数が異常に高い超高速個体ですな！", hint: "結論から話すのが鉄則。前置きが長いとタイムアウト（イライラ）を起こしますぞ。", obs: "エレベーターの『閉』ボタンを連打する回数を数えたまえ。" },
+    "のんびり屋": { first: "時間の流れを独自に減速させている個体ですな。", hint: "急かしても加速しません。君がそのリズムに同期すれば、世界は平和に見えますぞ。", obs: "周囲がパニックな中、どれほど優雅に歩いているか観察せよ。" },
+    "ルーチン固執": { first: "精密機械のように手順を愛する個体ですな。", hint: "手順を乱すのは禁物。あえてそのリズムに乗ることで信頼度がバク上がりしますぞ。", obs: "ルーチンが崩れた瞬間の『フリーズ時間』を計測せよ。" },
+    "探し物バグ": { first: "視覚センサーに一時的なバグが出る個体ですな。", hint: "手に持っているものを探していたら、優しくポインター（指）で示してあげたまえ。", obs: "一日何回「あれどこだっけ？」と言うか統計を取れ。" },
+    "方向音痴OS": { first: "地図データを読み込めない特殊ナビ搭載個体ですな。", hint: "右と言って左に行くのは仕様です。目的地まで手を引いて通信を維持せよ。", obs: "地図を回す角度を計測せよ。360度回転したら本物ですな。" },
+    "ギリギリ駆動": { first: "締め切り5分前にならないと火がつかない個体ですな。", hint: "早くやれと言うだけ無駄です。最後に発揮される超火力を信じて待ちたまえ。", obs: "限界直前の『驚異的な集中力』をデータに記録せよ。" },
+
+    // 感情OS系
+    "褒め殺し弱点": { first: "称賛で防壁が崩壊する素直な個体ですな。", hint: "お願い事の前に、靴の輝きやペンの持ち方を褒めたまえ。OSが滑らかに動きますぞ。", obs: "褒められた時の照れ隠しの『不自然な動き』を記録せよ。" },
+    "ツンデレ": { first: "表面の冷気と内側の熱気が矛盾した個体ですな。", hint: "厳しい言葉は『挨拶』、その後のわずかな沈黙が『本音』です。高度な翻訳をせよ。", obs: "突き放した後にこっそりこちらを気にする『視線のバグ』を検知せよ。" },
+    "豆腐メンタル": { first: "心という名のサーバーが非常に脆い個体ですな。", hint: "指摘はオブラート100枚に包みたまえ。強い言葉は即クラッシュの原因ですぞ。", obs: "ショックを受けた時の『耳の垂れ具合』を視覚的に観察せよ。" },
+    "鋼鉄の意志": { first: "一度決めたら設定変更不能な頑固OSですな。", hint: "正面衝突は時間の無駄ですぞ。別のOSだと思って、共存の道を模索したまえ。", obs: "説得を何回スルーするか、その鉄壁の守備力を計測せよ。" },
+    "涙腺崩壊": { first: "感情の排熱（涙）が非常にスムーズな個体ですな。", hint: "泣いているのは故障ではなく、通常運転です。ハンカチを渡して同期を維持せよ。", obs: "どんな単語に涙腺が反応するか、キーワードを特定せよ。" },
+    "ポーカーフェイス": { first: "内部演算を一切表に出さない高度な暗号化個体ですな。", hint: "表情より、指先の動きや足の組み替えに本音のログが出るかもしれませんぞ。", obs: "0.1秒だけ見せる『本音のチラつき』を逃さず検知せよ。" },
+    "寂しがり屋": { first: "常に他個体と接続していないと不安定になる個体ですな。", hint: "「見てるよ」という信号（相槌）を送り続けるだけで、動作が安定しますぞ。", obs: "放置された時に出す『かまってオーラ』の範囲を測定せよ。" },
+    "熱血モード": { first: "常にCPUがオーバーヒート気味の個体ですな！", hint: "暑苦しい時は、適度な冷却液（冷静な一言）を流し込んで温度を下げたまえ。", obs: "拳を握る回数と、声の大きさの相関を調査せよ。" },
+    "冷笑フィルター": { first: "何事も斜めから見る特殊レンズを搭載した個体ですな。", hint: "「面白い分析ですな！」と面白がる側に回れば、意外と良い研究データが得られますぞ。", obs: "一日に何回、鼻で笑ったか（フッ...）をカウントせよ。" },
+    "嫉妬センサー": { first: "他人の成功を敏感に検知するアラート個体ですな。", hint: "この個体の前では、自慢パケットは送信禁止です。謙虚なプロトコルで接したまえ。", obs: "他人が褒められた時の『顔の引きつり』をミリ単位で観察せよ。" },
+
+    // 社会OS系
+    "空気読みすぎ": { first: "周囲のスキャンに全リソースを割く個体ですな。", hint: "自分の意見が消えています。たまには『君のOSはどう思う？』と聞いてあげたまえ。", obs: "一言発する前に、何回周囲をキョロキョロしたかスキャン回数を計測せよ。" },
+    "マイペース": { first: "自分専用の時計で生きる、独立独歩な個体ですな。", hint: "君の時計に合わせると君が故障します。『別の時間軸の人だ』と割り切りたまえ。", obs: "周囲がパニックな中、どれほど落ち着いているか温度差を楽しめ。" },
+    "社交的": { first: "高出力な広域通信型個体ですな！", hint: "情報の拡散が速いですぞ。秘密のデータはそもそも入力しないのが安全ですな。", obs: "一度に何人の個体と同時接続（会話）できるか計測せよ。" },
+    "内向的": { first: "内部サーバーで深い演算を行う、静かなプロセッサですな。", hint: "返信が遅いのはフリーズではなく『構築中』。再起動（急かす）せず待ちたまえ。", obs: "一言発した後の、安堵のため息（排熱処理）を見逃すな。" },
+    "リーダー志向": { first: "常に他個体を制御下に置きたがる親機属性ですな。", hint: "逆らわず、適度な報告（ログ）を送信しておけば、君を守る防壁になってくれますぞ。", obs: "指示を出す時の『指差しの角度』を観察せよ。" },
+    "フォロワー属性": { first: "強力な親機にぶら下がることで安定する子機ですな。", hint: "決断を丸投げしがちです。たまには小さな選択をさせて、独立駆動を促したまえ。", obs: "「何でもいいよ」と言った回数をカウントせよ。" },
+    "忖度エンジン": { first: "本音を圧縮し、相手の望みを先読みする最適化個体ですな。", hint: "無理しすぎていないか、たまにエラーログ（溜め息）が出ていないか確認せよ。", obs: "本当は嫌そうな時の『眉間の0.1mmのシワ』を検知せよ。" },
+    "忖度ゼロ": { first: "相手の意図を1mmも汲み取らない、清々しい直球個体ですな。", hint: "悪気はありません。言葉を額面通りに受け取り、こちらも直球で通信したまえ。", obs: "空気が凍りついた瞬間の、本人の『キョトン顔』を観察せよ。" },
+    "秘密保持エラー": { first: "データの暗号化を忘れ、即全体放送する個体ですな。", hint: "内緒話は禁物。この個体に話したことは、地球全体に送信されたと思いなさい。", obs: "「ここだけの話」が広まるスピードを時速で計測せよ。" },
+    "お節介プログラム": { first: "頼まれていないタスクを勝手に処理する個体ですな。", hint: "親切心という名のバグです。ありがたく受け取るか、丁重にアクセス拒否せよ。", obs: "一日何回「やってあげたよ」と言うか記録せよ。" },
+
+    // 特殊仕様系
+    "天然": { first: "常識のプロトコルを無視する、独自OS搭載個体ですな！", hint: "予測不能な挙動こそが正常動作。『そうきたか！』と楽しむのが正解ですな。", obs: "言い間違いが奇跡的に正解へ繋がる『バグの芸術』を記録せよ。" },
+    "雑学王": { first: "膨大な無駄データをストックする巨大ストレージ個体ですな。", hint: "検索するより聞いたほうが早いです。ただし、通信が長引くので時間は確保せよ。", obs: "話が本題から何km離れたところまで飛んでいくか追跡せよ。" },
+    "コレクター": { first: "特定のアイテムに全リソースを割く偏った個体ですな。", hint: "そのコレクションを一つ褒めるだけで、最大級の好意（接続）が得られますぞ。", obs: "同じようなものを何個持っているか、その重複率を算出せよ。" },
+    "ロマンチスト": { first: "現実より理想の夢を優先して演算する個体ですな。", hint: "たまには君も夢のパケットを受信してみたまえ。世界が少し綺麗に見えますぞ。", obs: "遠くを見つめている時の『瞳の輝き度』をスキャンせよ。" },
+    "リアリスト": { first: "数字と事実のみで構成された、超冷却個体ですな。", hint: "夢を語ると論理的に削除されます。相談は具体的なデータを持って挑みたまえ。", obs: "一日の会話の中で『感情的な単語』が何回出たか調べよ。多分ゼロですな。" },
+    "健康オタク": { first: "筐体（体）のメンテナンスに異常な情熱を燃やす個体ですな。", hint: "最新の健康パッチ情報を教えてくれます。少し試してみるのも悪くありませんな。", obs: "一日に摂取するサプリメントの個数を数えたまえ。" },
+    "デジタル中毒": { first: "画面という外部装置がないと通信途絶する個体ですな。", hint: "オフラインでは挙動が不審になります。Wi-Fiのある環境で接してあげたまえ。", obs: "スマホの画面を見ている時間と、寝ている時間を比較せよ。" },
+    "アナログ派": { first: "古い記録方式（紙）を愛する、レトロOS個体ですな。", hint: "手書きのメモは温かみのあるパケットです。大事に保存してあげたまえ。", obs: "筆箱の中の鉛筆の短さをチェックせよ。それが努力のログですぞ。" },
+    "レアキャラ": { first: "出現率が極めて低い、伝説級の個体ですな！", hint: "出会えただけで今日の運勢は最高です。遠くからその生態を拝むのがマナーですな。", obs: "次に現れる場所を予想せよ。当たれば君もレアキャラの仲間入りですぞ。" },
+    "ラスボス感": { first: "威圧感（デバフ）を周囲に撒き散らす高出力個体ですな。", hint: "恐れることはありません。ワタクシという盾を持って、堂々と観察したまえ。", obs: "その個体が部屋に入ってきた瞬間の、周囲の『静まり返り秒数』を計測せよ。" }
 };
 
+// --- 2. メイン処理：データの読み込みと表示 ---
+function initAnalysis() {
+    const nickname = localStorage.getItem('gth_nickname') || "解析不能個体";
+    const rawTags = localStorage.getItem('gth_tag') || "";
+    const selectedTagsArray = rawTags ? rawTags.split(',') : ["音量バグ"];
 
-   // --- 追加：保存用の関数ですぞ！ ---
-    function saveToCollection(nickname, tag, resultData) {
-        // 今までのリストを読み出す
-        const collections = JSON.parse(localStorage.getItem('gth_collections') || '[]');
-
-        // すでに同じ「あだ名」と「タグ」の組み合わせが登録されていないか確認
-        const isDuplicate = collections.some(item => item.nickname === nickname && item.tag === tag);
-
-        if (!isDuplicate) {
-            // 新しい個体データを作成（AIのセリフも一緒に保存してしまいますぞ）
-            const newEntry = {
-                nickname: nickname,
-                tag: tag,
-                first: resultData.first,
-                hint: resultData.hint,
-                obs: resultData.obs,
-                date: new Date().toISOString()
-            };
-
-            // リストの先頭に追加して保存
-            collections.unshift(newEntry);
-            localStorage.setItem('gth_collections', JSON.stringify(collections));
-            console.log("図鑑に新規登録完了ですぞ！");
-        }
-    }
-    // ------------------------------
-
-    // ストレージから入力値を取得
-    const storedNickname = localStorage.getItem('gth_nickname') || "解析不能個体";
-    const rawTag = localStorage.getItem('gth_tag') || "音量バグ";
-    const selectedTag = rawTag.split(',')[0]; // 最初のタグを使用
-
-    // データベースから該当する解説を取得
-    const data = adviceDatabase[selectedTag] || adviceDatabase["音量バグ"];
-
-    // --- ここで保存関数を実行しますぞ！ ---
-    saveToCollection(storedNickname, selectedTag, data);
-
-    // 画面への反映
-    document.getElementById('nickname-display').textContent = `個体：${storedNickname}`;
-    document.getElementById('first-voice').textContent = data.first;
-
+    // 画面要素の取得
+    const nicknameDisplay = document.getElementById('nickname-display');
+    const voiceDisplay = document.getElementById('first-voice');
     const hintsContainer = document.getElementById('conquest-hints');
-    const div = document.createElement('div');
-    div.className = "bg-emerald-900/10 p-3 rounded-lg border-l-4 border-emerald-500 text-sm leading-relaxed";
-    div.textContent = data.hint;
-    hintsContainer.appendChild(div);
-
     const obsContainer = document.getElementById('observation-points');
-    const li = document.createElement('li');
-    li.textContent = data.obs;
-    obsContainer.appendChild(li);
+
+    if (!nicknameDisplay || !voiceDisplay || !hintsContainer || !obsContainer) return;
+
+    // 初期化
+    nicknameDisplay.textContent = `個体：${nickname}`;
+    hintsContainer.innerHTML = "";
+    obsContainer.innerHTML = "";
+
+    // タグごとの処理
+    selectedTagsArray.forEach((tagName, index) => {
+        const data = adviceDatabase[tagName] || { 
+            first: "未知のバグ個体ですな...", 
+            hint: "まだデータが不足しています。君の観察で埋めてくれたまえ。", 
+            obs: "特になし。未知の領域ですぞ。" 
+        };
+
+        // 最初の1つ目のセリフをメインに表示
+        if (index === 0) voiceDisplay.textContent = data.first;
+
+        // ヒントカードを生成
+        const hintDiv = document.createElement('div');
+        hintDiv.className = "bg-emerald-900/10 p-3 rounded-lg border-l-4 border-emerald-500 text-sm mb-4 leading-relaxed";
+        hintDiv.innerHTML = `<span class="font-bold text-emerald-400">[${tagName}] への対策：</span><br>${data.hint}`;
+        hintsContainer.appendChild(hintDiv);
+
+        // 観察ポイントを生成
+        const obsLi = document.createElement('li');
+        obsLi.className = "mb-2 text-sm";
+        obsLi.innerHTML = `<span class="text-emerald-500 font-bold">・${tagName}:</span> ${data.obs}`;
+        obsContainer.appendChild(obsLi);
+    });
+
+    // 図鑑へ保存（最初の属性を代表として保存）
+    saveToCollection(nickname, selectedTagsArray.join(' / '), adviceDatabase[selectedTagsArray[0]] || {});
+}
+
+// --- 3. 保存用関数 ---
+function saveToCollection(nickname, tagString, primaryData) {
+    const collections = JSON.parse(localStorage.getItem('gth_collections') || '[]');
+    const isDuplicate = collections.some(item => item.nickname === nickname && item.tag === tagString);
+
+    if (!isDuplicate) {
+        const newEntry = {
+            nickname: nickname,
+            tag: tagString,
+            first: primaryData.first || "解析完了ですぞ！",
+            hint: primaryData.hint || "データ収集中...",
+            obs: primaryData.obs || "観察を続けたまえ。",
+            date: new Date().toISOString()
+        };
+        collections.unshift(newEntry);
+        localStorage.setItem('gth_collections', JSON.stringify(collections));
+        console.log("図鑑への記録が完了しました。研究成果は不滅ですぞ！");
+    }
+}
+
+// 実行！
+window.onload = initAnalysis;
 </script>
 
 </body>
