--- a/index.html
+++ b/index.html
@@ -7,38 +7,88 @@
     <link rel="manifest" href="manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0d1117; color: #e6edf3; font-family: 'Helvetica Neue', Arial, sans-serif; }
+        body { 
+            background-color: #0d1117; 
+            color: #e6edf3; 
+            font-family: 'Helvetica Neue', Arial, sans-serif; 
+            overflow: hidden; /* 宇宙空間のためスクロールを禁止 */
+            position: relative;
+        }
         .emerald-gradient { background: linear-gradient(135deg, #10b981 0%, #059669 100%); }
+        /* 宇宙の背景エフェクト */
+        .star-bg {
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: radial-gradient(circle at center, rgba(255,255,255,0.05) 0%, transparent 70%);
+            animation: twinkle 60s linear infinite;
+        }
+        @keyframes twinkle {
+            0% { background-position: 0% 0%; }
+            100% { background-position: 100% 100%; }
+        }
+        /* 個体カードの基本スタイル */
+        .individual-card {
+            position: absolute;
+            cursor: pointer;
+            padding: 8px 12px;
+            background: rgba(29, 78, 216, 0.1); /* 薄い青紫 */
+            border: 1px solid rgba(16, 185, 129, 0.3);
+            border-radius: 9999px; /* 丸いバッジ */
+            font-size: 0.75rem; /* text-xs */
+            color: #a7f3d0; /* text-emerald-200 */
+            transition: transform 0.5s ease-out, box-shadow 0.3s ease-in-out;
+            transform: translate(-50%, -50%); /* 中央揃え */
+            white-space: nowrap;
+            z-index: 10;
+        }
+        .individual-card:hover {
+            transform: translate(-50%, -50%) scale(1.05);
+            box-shadow: 0 0 15px rgba(16, 185, 129, 0.4);
+        }
+        /* メインコンテンツを宇宙マップの上に配置 */
+        .main-content {
+            position: relative;
+            z-index: 20;
+            background: rgba(13, 17, 23, 0.7); /* 半透明の背景 */
+            backdrop-filter: blur(5px);
+            border-radius: 20px;
+            padding: 24px;
+            width: 100%;
+            max-width: 448px;
+            box-shadow: 0 0 30px rgba(16, 185, 129, 0.1);
+        }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
-    <header class="text-center mb-12">
-        <h1 class="text-4xl font-bold mb-2 tracking-wider">Guide to Humans</h1>
-        <p class="text-emerald-400 text-lg">〜分からないから、探りたい！〜</p>
-    </header>
-<main>
-    <main class="w-full max-w-md">
-    <div class="relative w-48 h-48 mx-auto mb-8 rounded-full border-2 border-emerald-500/30 overflow-hidden shadow-[0_0_20px_rgba(16,185,129,0.2)]">
-        <img src="main-visual.png" alt="人間攻略・観察図鑑" class="w-full h-full object-cover">
-    </div>
+    <div class="star-bg"></div>
 
-    <div id="bug-forecast" class="mb-6 p-4 bg-emerald-900/20 border border-emerald-500/30 rounded-2xl text-xs">
-        <div class="flex items-center mb-1">
-            <span class="animate-pulse mr-2">⚠️</span>
-            <span class="font-bold text-emerald-400">本日のバグ注意報</span>
-        </div>
-        <p id="forecast-text" class="text-gray-300">スキャン中...ですぞ...</p>
-    </div>
+    <div class="main-content">
+        <header class="text-center mb-12">
+            <h1 class="text-4xl font-bold mb-2 tracking-wider">Guide to Humans</h1>
+            <p class="text-emerald-400 text-lg">〜分からないから、探りたい！〜</p>
+        </header>
 
-    <div class="bg-gray-800/50 p-4 rounded-2xl mb-8 border border-emerald-500/10">
-        <div class="flex justify-between items-end mb-2">
-            <span class="text-[10px] text-gray-400 uppercase tracking-widest">Researcher Rank</span>
-            <span id="rank-display" class="text-lg font-bold text-emerald-400">新人観察員</span>
+        <div class="relative w-48 h-48 mx-auto mb-8 rounded-full border-2 border-emerald-500/30 overflow-hidden shadow-[0_0_20px_rgba(16,185,129,0.2)]">
+            <img src="main-visual.png" alt="人間攻略・観察図鑑" class="w-full h-full object-cover">
         </div>
-        <div class="w-full bg-gray-900 h-1.5 rounded-full overflow-hidden">
-            <div id="rank-bar" class="emerald-gradient h-full transition-all duration-1000" style="width: 0%;"></div>
+
+        <div id="bug-forecast" class="mb-6 p-4 bg-emerald-900/20 border border-emerald-500/30 rounded-2xl text-xs">
+            <div class="flex items-center mb-1">
+                <span class="animate-pulse mr-2">⚠️</span>
+                <span class="font-bold text-emerald-400">本日のバグ注意報</span>
+            </div>
+            <p id="forecast-text" class="text-gray-300">スキャン中...ですぞ...</p>
         </div>
-    </div>
+
+        <div class="bg-gray-800/50 p-4 rounded-2xl mb-8 border border-emerald-500/10">
+            <div class="flex justify-between items-end mb-2">
+                <span class="text-[10px] text-gray-400 uppercase tracking-widest">Researcher Rank</span>
+                <span id="rank-display" class="text-lg font-bold text-emerald-400">新人観察員</span>
+            </div>
+            <div class="w-full bg-gray-900 h-1.5 rounded-full overflow-hidden">
+                <div id="rank-bar" class="emerald-gradient h-full transition-all duration-1000" style="width: 0%;"></div>
+            </div>
+        </div>
 
     <nav class="space-y-4">
         <button onclick="location.href='register.html'" class="w-full py-4 text-xl font-bold bg-gray-800 border border-emerald-500/50 rounded-2xl hover:bg-gray-700 transition-all active:scale-95 shadow-lg">
@@ -72,6 +122,7 @@
     window.onload = function() {
         updateRank();
         setForecast();
+        renderHumanMap(); // ★ 新しく追加するマップ描画関数
     };
 // --- 研究員ランクの更新ロジック ---
     function updateRank() {
@@ -124,7 +175,52 @@
             "今日は[要約禁止]の個体が活発です。話が長くなるのを覚悟したまえ。"
         ];
         forecastText.textContent = forecasts[new Date().getDate() % forecasts.length];
-    }   
+    }
+    // --- ★ ここからマップ描画関数の追加ですぞ！ ---
+        function renderHumanMap() {
+            const collections = JSON.parse(localStorage.getItem('gth_collections') || '[]');
+            const appBody = document.body; // アプリのボディ全体を基準にする
+            const centerX = appBody.clientWidth / 2;
+            const centerY = appBody.clientHeight / 2;
+
+            // マップの外側（ナビゲーションやボタン群の表示領域）
+            const mapAreaWidth = appBody.clientWidth * 0.8; 
+            const mapAreaHeight = appBody.clientHeight * 0.8;
+
+            collections.forEach((item, index) => {
+                const card = document.createElement('div');
+                card.className = "individual-card";
+                card.textContent = item.nickname;
+
+                // 解像度（再解析回数）に応じて距離を計算
+                // 仮で、再解析回数が多いほど中心に近くする
+                // 距離は外周から中心へのパーセンテージ
+                const resolution = item.reanalyzeCount || 0; // 新しいプロパティを追加
+                const maxResolution = 5; // 最大の再解析回数 (仮)
+                const distanceRatio = 1 - Math.min(resolution / maxResolution, 1); // 0 (近い) ~ 1 (遠い)
+
+                // ランダムな角度と距離で配置
+                const angle = (index * 137.5) % 360; // 黄金角レイアウト
+                const radiusX = (mapAreaWidth / 2) * distanceRatio * 0.8; // マップの中心からのX距離
+                const radiusY = (mapAreaHeight / 2) * distanceRatio * 0.8; // マップの中心からのY距離
+
+                const x = centerX + radiusX * Math.cos(angle * Math.PI / 180) + (Math.random() - 0.5) * 50; // 微妙にズラす
+                const y = centerY + radiusY * Math.sin(angle * Math.PI / 180) + (Math.random() - 0.5) * 50; // 微妙にズラす
+
+                card.style.left = `${x}px`;
+                card.style.top = `${y}px`;
+
+                // クリックで再解析画面へ
+                card.onclick = () => {
+                    localStorage.setItem('gth_nickname', item.nickname);
+                    localStorage.setItem('gth_tag', item.tag.replace(/ \/ /g, ','));
+                    location.href = 'result.html';
+                };
+
+                appBody.appendChild(card);
+            });
+        }
+        // ----------------------------------------------------   
 </script>
 
 </body>
