--- a/index.html
+++ b/index.html
@@ -91,8 +91,14 @@
         </div>
 
     <nav class="space-y-4">
-        <button onclick="location.href='register.html'" class="w-full py-4 text-xl font-bold bg-gray-800 border border-emerald-500/50 rounded-2xl hover:bg-gray-700 transition-all active:scale-95 shadow-lg">
+        <div class="grid grid-cols-2 gap-3">
+        <button onclick="location.href='register.html'" class="py-6 text-lg font-bold bg-gray-800 border border-emerald-500/50 rounded-2xl hover:bg-gray-700 transition-all active:scale-95 shadow-lg flex flex-col items-center justify-center">
+            <span class="text-2xl mb-1">📝</span>
             図鑑に登録する
+        </button>
+        <button onclick="location.href='lab.html'" class="py-6 text-lg font-bold bg-gray-800 border border-purple-500/50 rounded-2xl hover:bg-purple-900/20 transition-all active:scale-95 shadow-lg flex flex-col items-center justify-center">
+            <span class="text-2xl mb-1">🧪</span>
+            モヤっとラボ
         </button>
         <button onclick="location.href='collection.html'" class="w-full py-3 text-sm font-bold text-emerald-400 bg-gray-900 border border-emerald-500/20 rounded-xl hover:bg-gray-800 transition-all">
             図鑑リストを見る
