--- a/lab.html
+++ b/lab.html
@@ -84,6 +84,28 @@ const simulationEngine = {
         "ラスボス感": { base: "「……で、君は結局、何が言いたいんだね？（威圧感）」", reactions: { "同調": "「ほう、私の意図を理解しているというわけか。」", "論理": "「面白い。その論理、最後まで聞かせてもらおうか。」", "褒め": "「お世辞はいい。本題に入りたまえ。」", "脱出": "「……（沈黙が一番怖い！）」" }},
         "要約禁止": { base: "「それでね、昨日あそこに行った時にあんなことがあって、あ、そういえば…（無限ループ）」", reactions: { "同調": "「情報量が豊富で助かりますな！」", "論理": "「えーっと、結論のパケットはどこにありますかな？」", "褒め": "「その話術、落語家レベルですぞ！」", "脱出": "「続きはクラウド（今度）で！」" }},
         "音量バグ": { base: "「お疲れ様です！！（鼓膜が震える大音量）」", reactions: { "同調": "「元気なOSは最高ですな！」", "論理": "「音量を30%カットして通信しましょう。」", "褒め": "「拡声器いらずの素晴らしい喉ですぞ！」", "脱出": "「耳の再起動が必要なので失礼！」" }}
+        // --- 通信OS系（続き） ---
+        "既読スルー仕様": { base: "「（メッセージを送って3日後）……あ、見てたよ。で、何だっけ？」", reactions: { "同調": "「確認済みログが取れれば十分ですな！」", "論理": "「通信プロトコルの応答速度が0.001bpsですぞ。」", "褒め": "「情報の熟成期間が長い！流石ですな！」", "脱出": "「再送パケットを送っておきます！」" }},
+        "オウム返し": { base: "「え、昨日大変だったの？」「そう、昨日大変だったの。」", reactions: { "同調": "「ミラーリング通信、完璧ですな！」", "論理": "「反響音（エコー）が激しいですぞ。」", "褒め": "「私の言葉を全コピーするとは、光栄ですな！」", "脱出": "「エコーキャンセラーを起動！」" }},
+        "遠回しプロトコル": { base: "「別にいいんだけどさ、普通はああいうことしないよねぇ……（チラッ）」", reactions: { "同調": "「行間を読む演算リソースを全投入しますな！」", "論理": "「『普通』の定義ファイルを送信してください。」", "褒め": "「文学的な暗号通信、しびれますな！」", "脱出": "「本音を探しに深層へ！」" }},
+
+        // --- 動作OS系（続き） ---
+        "ルーチン固執": { base: "「この時間はコーヒーを飲む決まりなの！話しかけないで！」", reactions: { "同調": "「鉄壁のスケジュール管理ですな！」", "論理": "「ルーチンの割り込み処理は禁止事項でしたな。」", "褒め": "「精密時計のような正確さ、流石ですぞ！」", "脱出": "「次のスロットまで待機！」" }},
+        "探し物バグ": { base: "「ない！ない！スマホがない！（※手に持っている）」", reactions: { "同調": "「視覚センサーの盲点に入りましたな！」", "論理": "「右手の重量センサーを確認したまえ。」", "褒め": "「灯台下暗しを体現する、エンターテイナー！」", "脱出": "「捜索隊を編成します！」" }},
+        "ギリギリ駆動": { base: "「（締切10分前）よし、今からやるか……ここからが本番だよ。」", reactions: { "同調": "「ブーストモードの火力が凄まじいですな！」", "論理": "「バッファ時間がマイナスに突入していますぞ。」", "褒め": "「崖っぷちで輝く、野生のプロセッサ！」", "脱出": "「爆発（納品）を見届けます！」" }},
+
+        // --- 感情OS系（続き） ---
+        "褒め殺し弱点": { base: "「えっ、私のプレゼン良かった？ そんな、天才だなんて困るなぁ〜（ニヤニヤ）」", reactions: { "同調": "「称賛パケットをさらに100倍で送信！」", "論理": "「事実を述べたまで。調子に乗るのも演算内です。」", "褒め": "「宇宙一！銀河一！いや、概念一ですな！」", "脱出": "「次の称賛対象を探しに！」" }},
+        "鋼鉄の意志": { base: "「ダメなものはダメ。何と言われても私の設定は変えない。」", reactions: { "同調": "「読み取り専用（Read Only）属性、流石ですな！」", "論理": "「仕様変更のパッチは受け付けられませんか。」", "褒め": "「その頑固さ、ダイヤモンド並みの硬度！」", "脱出": "「別のルートを検索開始！」" }},
+        "寂しがり屋": { base: "「ねぇ、今何してるの？ 返信まだ？ ずっと待ってるんだけど……」", reactions: { "同調": "「常時接続（オンライン）こそが正義ですな！」", "論理": "「他個体への依存リソースが80%を超えています。」", "褒め": "「愛を求める高感度アンテナ、素晴らしい！」", "脱出": "「愛のパケットを投下して離脱！」" }},
+
+        // --- 社会OS系（続き） ---
+        "忖度エンジン": { base: "「皆さんがそう仰るなら、私もそれで……（自分がない）」", reactions: { "同調": "「全体との同期、お見事ですな！」", "論理": "「君自身の内部ログは空っぽですかな？」", "褒め": "「周囲に溶け込む光学迷彩、流石です！」", "脱出": "「本音のパッチを当てに！」" }},
+        "空気読みすぎ": { base: "「（……あ、今私が喋るとまずいかな？ でも言わなきゃ……どうしよう）」", reactions: { "同調": "「スキャンのしすぎでCPUが熱くなってますぞ！」", "論理": "「周囲の顔色はただの光信号に過ぎません。」", "褒め": "「気遣いの魔術師！もはやエスパー！」", "脱出": "「新鮮な空気を吸いに！」" }},
+        "マイペース": { base: "「（全員が急いでいる中）あ、空が綺麗だな〜。お団子食べたい。」", reactions: { "同調": "「独自の内部時計で駆動中。平和ですな。」", "論理": "「周囲のクロック周波数と同期エラーが発生中。」", "褒め": "「世界を自分の色に塗り替える、アーティスト！」", "脱出": "「その時間軸、お借りします！」" }},
+
+        // --- 特殊仕様系 ---
+        "レアキャラ": { base: "「（3ヶ月ぶりに現れて）……よっ。元気？」", reactions: { "同調": "「激レアモンスターに遭遇！運気アップですな！」", "論理": "「出現率0.01%の個体を確認。記録します。」", "褒め": "「現れるだけで価値がある。もはや伝説！」", "脱出": "「消える前にシャッターを切る！」" }}
         // ... 他の属性も同様に追加可能ですな
     }
 };
