--- a/index.html
+++ b/index.html
@@ -269,5 +269,8 @@
     function openLabManual() { document.getElementById('lab-manual').classList.remove('hidden'); }
     function closeLabManual() { document.getElementById('lab-manual').classList.add('hidden'); }
 </script>
+<body class="flex flex-col items-center p-4 bg-[#0d1117] text-[#e6edf3] min-h-[100svh] overflow-y-auto">
+    <div class="w-full max-w-md flex flex-col pb-10">
+        </div>
 </body>
 </html>
