--- a/index.html
+++ b/index.html
@@ -6,59 +6,60 @@
     <title>Guide to Humans</title>
     <link rel="manifest" href="manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body { 
-            background-color: #0d1117; 
-            color: #e6edf3; 
-            font-family: 'Helvetica Neue', Arial, sans-serif; 
-            overflow: hidden; /* 宇宙空間のためスクロールを禁止 */
-            position: relative;
-        }
-        .emerald-gradient { background: linear-gradient(135deg, #10b981 0%, #059669 100%); }
-        /* 宇宙の背景エフェクト */
-        .star-bg {
-            position: absolute;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: radial-gradient(circle at center, rgba(255,255,255,0.05) 0%, transparent 70%);
-            animation: twinkle 60s linear infinite;
-        }
-        @keyframes twinkle {
-            0% { background-position: 0% 0%; }
-            100% { background-position: 100% 100%; }
-        }
-        /* 個体カードの基本スタイル */
-        .individual-card {
-            position: absolute;
-            cursor: pointer;
-            padding: 8px 12px;
-            background: rgba(29, 78, 216, 0.1); /* 薄い青紫 */
-            border: 1px solid rgba(16, 185, 129, 0.3);
-            border-radius: 9999px; /* 丸いバッジ */
-            font-size: 0.75rem; /* text-xs */
-            color: #a7f3d0; /* text-emerald-200 */
-            transition: transform 0.5s ease-out, box-shadow 0.3s ease-in-out;
-            transform: translate(-50%, -50%); /* 中央揃え */
-            white-space: nowrap;
-            z-index: 10;
-        }
-        .individual-card:hover {
-            transform: translate(-50%, -50%) scale(1.05);
-            box-shadow: 0 0 15px rgba(16, 185, 129, 0.4);
-        }
-        /* メインコンテンツを宇宙マップの上に配置 */
-        .main-content {
-            position: relative;
-            z-index: 20;
-            background: rgba(13, 17, 23, 0.7); /* 半透明の背景 */
-            backdrop-filter: blur(5px);
-            border-radius: 20px;
-            padding: 24px;
-            width: 100%;
-            max-width: 448px;
-            box-shadow: 0 0 30px rgba(16, 185, 129, 0.1);
-        }
-    </style>
-</head>
+   <style>
+    body { 
+        background-color: #0d1117; 
+        color: #e6edf3; 
+        font-family: 'Helvetica Neue', Arial, sans-serif; 
+        /* overflow: hidden を削除してスクロールを許容 */
+        min-height: 100dvh; /* スマホのアドレスバーを除いた100% */
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: env(safe-area-inset-top) 0 env(safe-area-inset-bottom) 0;
+    }
+
+    .emerald-gradient { background: linear-gradient(135deg, #10b981 0%, #059669 100%); }
+
+    /* 宇宙マップ：画面の上半分に固定 */
+    #universe-map {
+        position: fixed;
+        top: 0; left: 0; width: 100%; height: 100%;
+        z-index: 1;
+        pointer-events: none; /* 下のボタン操作を邪魔しない */
+    }
+
+    /* メインコンテンツ：下側に配置 */
+    .main-content {
+        position: relative;
+        z-index: 20;
+        margin-top: auto; /* 画面の下の方へ押しやる */
+        margin-bottom: 10px;
+        background: rgba(13, 17, 23, 0.85);
+        backdrop-filter: blur(8px);
+        border-radius: 24px 24px 0 0; /* 上だけ丸く */
+        border: 1px solid rgba(16, 185, 129, 0.2);
+        padding: 20px 16px;
+        width: 100%;
+        max-width: 448px;
+        box-sizing: border-box;
+    }
+
+    /* 個体バッジ（宇宙に浮かぶやつ） */
+    .individual-card {
+        position: absolute;
+        pointer-events: auto; /* カードだけは触れるように */
+        padding: 6px 10px;
+        background: rgba(29, 78, 216, 0.2);
+        border: 1px solid rgba(16, 185, 129, 0.4);
+        border-radius: 9999px;
+        font-size: 10px;
+        color: #a7f3d0;
+        white-space: nowrap;
+        transform: translate(-50%, -50%);
+        z-index: 5;
+    }
+</style>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
     <div class="star-bg"></div>
 
@@ -90,32 +91,32 @@
             </div>
         </div>
 
-    <nav class="space-y-4">
-    <div class="grid grid-cols-2 gap-3">
-        <button onclick="location.href='register.html'" class="py-6 text-lg font-bold bg-gray-800 border border-emerald-500/50 rounded-2xl hover:bg-gray-700 transition-all active:scale-95 shadow-lg flex flex-col items-center justify-center">
-            <span class="text-2xl mb-1">📝</span>
+    <nav class="space-y-2 w-full max-w-md px-2">
+    <div class="grid grid-cols-2 gap-2">
+        <button onclick="location.href='register.html'" class="py-3 text-sm font-bold bg-gray-800 border border-emerald-500/50 rounded-xl hover:bg-gray-700 transition-all active:scale-95 shadow-lg flex items-center justify-center gap-2">
+            <span class="text-lg">📝</span>
             登録する
         </button>
-        <button onclick="location.href='lab.html'" class="py-6 text-lg font-bold bg-gray-800 border border-purple-500/50 rounded-2xl hover:bg-purple-900/20 transition-all active:scale-95 shadow-lg flex flex-col items-center justify-center">
-            <span class="text-2xl mb-1">🧪</span>
+        <button onclick="location.href='lab.html'" class="py-3 text-sm font-bold bg-gray-800 border border-purple-500/50 rounded-xl hover:bg-purple-900/20 transition-all active:scale-95 shadow-lg flex items-center justify-center gap-2">
+            <span class="text-lg">🧪</span>
             モヤっとラボ
         </button>
     </div>
 
-    <div class="grid grid-cols-2 gap-3">
-        <button onclick="location.href='collection.html'" class="py-3 text-sm font-bold text-emerald-400 bg-gray-900 border border-emerald-500/20 rounded-xl hover:bg-gray-800 transition-all">
+    <div class="grid grid-cols-2 gap-2">
+        <button onclick="location.href='collection.html'" class="py-2 text-[11px] font-bold text-emerald-400 bg-gray-900 border border-emerald-500/20 rounded-lg">
             図鑑リスト
         </button>
-        <button onclick="openLabManual()" class="py-3 text-sm font-bold text-purple-400 bg-gray-900 border border-purple-500/20 rounded-xl hover:bg-gray-800 transition-all">
+        <button onclick="openLabManual()" class="py-2 text-[11px] font-bold text-purple-400 bg-gray-900 border border-purple-500/20 rounded-lg">
             ラボ解説
         </button>
     </div>
     
-    <div class="space-y-3 pt-2">
-        <button onclick="location.href='about.html'" class="w-full py-3 text-sm font-medium rounded-xl transition-all emerald-gradient hover:brightness-110 shadow-lg shadow-emerald-900/20">
-            このアプリについて（必読）
+    <div class="space-y-2 pt-1">
+        <button onclick="location.href='about.html'" class="w-full py-2.5 text-xs font-bold rounded-lg emerald-gradient hover:brightness-110 shadow-md">
+            このアプリについて
         </button>
-        <button onclick="allForceRetreat()" class="w-full py-3 text-xs font-bold text-red-400/70 border border-red-900/30 rounded-xl hover:bg-red-900/20 transition-all">
+        <button onclick="allForceRetreat()" class="w-full py-2 text-[10px] font-bold text-red-400/60 border border-red-900/20 rounded-lg active:bg-red-900/20 transition-all">
             人間関係に疲れた（全軍撤退）
         </button>
     </div>
