--- a/lab.html
+++ b/lab.html
@@ -2,53 +2,72 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>モヤっと・ラボ | Guide to Humans</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0d1117; color: #e6edf3; font-family: sans-serif; overflow: hidden; }
-        .chat-container { height: calc(100vh - 180px); overflow-y: auto; }
-        /* 相手の吹き出し（左） */
+        /* 画面全体の高さをスマホの表示領域（100dvh）に固定 */
+        body { 
+            background-color: #0d1117; 
+            color: #e6edf3; 
+            font-family: sans-serif; 
+            height: 100dvh; /* 動的ビューポート単位 */
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden; 
+        }
+
+        /* チャットエリア：flex-growで残りの高さをすべて使い、内部だけスクロールさせる */
+        .chat-container { 
+            flex-grow: 1; 
+            overflow-y: auto; 
+            -webkit-overflow-scrolling: touch; /* iOSでのスクロールを滑らかに */
+        }
+
         .bubble-left {
             background: #21262d;
             border: 1px solid #30363d;
             border-radius: 18px 18px 18px 2px;
-            position: relative;
         }
-        /* 自分の吹き出し（右） */
+
         .bubble-right {
-            background: #065f46; /* エメラルドグリーン */
+            background: #065f46;
             border-radius: 18px 18px 2px 18px;
         }
+
+        /* コマンドパネル：下部に固定。flex-shrink:0ではみ出しを防ぐ */
         .command-panel {
-            background: rgba(13, 17, 23, 0.95);
+            flex-shrink: 0;
+            background: rgba(13, 17, 23, 0.98);
             backdrop-filter: blur(10px);
             border-top: 1px solid rgba(16, 185, 129, 0.3);
+            padding-bottom: env(safe-area-inset-bottom); /* iPhoneのバー対策 */
         }
-    /* アニメーションを追加ですぞ！ */
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-    @keyframes bounceIn { 0% { opacity: 0; transform: scale(0.9); } 70% { transform: scale(1.05); } 100% { opacity: 1; transform: scale(1); } }
-    .animate-fade-in { animation: fadeIn 0.3s ease-out forwards; }
-    .animate-bounce-in { animation: bounceIn 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards; }
-</style>
-</head>
-<body class="flex flex-col h-screen max-w-md mx-auto border-x border-gray-800">
 
-    <header class="p-4 border-b border-gray-800 flex items-center justify-between bg-gray-900/50">
-        <button onclick="location.href='index.html'" class="text-gray-400">× 中止</button>
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes bounceIn { 0% { opacity: 0; transform: scale(0.9); } 70% { transform: scale(1.05); } 100% { opacity: 1; transform: scale(1); } }
+        .animate-fade-in { animation: fadeIn 0.3s ease-out forwards; }
+        .animate-bounce-in { animation: bounceIn 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards; }
+    </style>
+</head>
+<body class="max-w-md mx-auto border-x border-gray-800">
+
+    <header class="flex-shrink-0 p-4 border-b border-gray-800 flex items-center justify-between bg-gray-900/50">
+        <button onclick="location.href='index.html'" class="text-gray-400 text-sm font-bold">× 中止</button>
         <div class="text-center">
-            <p id="target-name" class="font-bold text-sm text-white">スキャン中...</p>
-            <p id="target-tags" class="text-[10px] text-emerald-500 font-mono italic">---</p>
+            <p id="target-name" class="font-bold text-xs text-white">スキャン中...</p>
+            <p id="target-tags" class="text-[9px] text-emerald-500 font-mono italic">---</p>
         </div>
         <div class="w-8 h-8 rounded-full bg-purple-900/50 border border-purple-500 flex items-center justify-center text-xs">🧪</div>
     </header>
 
     <main id="chat-box" class="chat-container p-4 space-y-4">
         <div class="flex justify-center">
-            <p class="text-[10px] bg-gray-800 text-gray-400 px-3 py-1 rounded-full uppercase tracking-widest">Simulation Started</p>
+            <p class="text-[9px] bg-gray-800 text-gray-400 px-3 py-1 rounded-full uppercase tracking-widest">Simulation Started</p>
         </div>
         
-        <div class="flex items-start gap-2">
+        <div class="flex items-start gap-2 animate-bounce-in">
             <div class="w-8 h-8 rounded-full bg-gray-700 flex-shrink-0 flex items-center justify-center text-sm">👤</div>
             <div class="bubble-left p-3 text-sm max-w-[80%] shadow-lg">
                 「え、まだその作業終わってないの？ 私なら5分で終わるけどなぁ…（笑）」
@@ -56,23 +75,26 @@
         </div>
     </main>
 
-    <section class="command-panel p-4 pb-8 space-y-3">
-        <p class="text-[10px] text-emerald-500 font-bold uppercase tracking-tighter text-center mb-2">Select Counter Command</p>
+    <section class="command-panel p-4 space-y-3">
+        <p class="text-[9px] text-emerald-500 font-bold uppercase tracking-tighter text-center mb-1">Select Counter Protocol</p>
         <div class="grid grid-cols-2 gap-2">
-            <button onclick="sendReply('同調', '同調プロトコル')" class="bg-gray-800 border border-emerald-500/30 py-2 rounded-lg text-xs hover:bg-emerald-900/20 active:scale-95 transition-all">
-                🤝 同調プロトコル
+            <button onclick="sendReply('同調', '同調プロトコル')" class="bg-gray-800 border border-emerald-500/30 py-2.5 rounded-xl text-xs font-bold hover:bg-emerald-900/20 active:scale-95 transition-all">
+                🤝 同調
             </button>
-            <button onclick="sendReply('論理', '論理バリア')" class="bg-gray-800 border border-blue-500/30 py-2 rounded-lg text-xs hover:bg-blue-900/20 active:scale-95 transition-all">
-                🛡️ 論理バリア
+            <button onclick="sendReply('論理', '論理バリア')" class="bg-gray-800 border border-blue-500/30 py-2.5 rounded-xl text-xs font-bold hover:bg-blue-900/20 active:scale-95 transition-all">
+                🛡️ 論理
             </button>
-            <button onclick="sendReply('褒め', '褒め殺しボム')" class="bg-gray-800 border border-yellow-500/30 py-2 rounded-lg text-xs hover:bg-yellow-900/20 active:scale-95 transition-all">
-                💣 褒め殺しボム
+            <button onclick="sendReply('褒め', '褒め殺しボム')" class="bg-gray-800 border border-yellow-500/30 py-2.5 rounded-xl text-xs font-bold hover:bg-yellow-900/20 active:scale-95 transition-all">
+                💣 褒め殺し
             </button>
-            <button onclick="sendReply('脱出', '緊急脱出')" class="bg-gray-800 border border-red-500/30 py-2 rounded-lg text-xs hover:bg-red-900/20 active:scale-95 transition-all">
+            <button onclick="sendReply('脱出', '緊急脱出')" class="bg-gray-800 border border-red-500/30 py-2.5 rounded-xl text-xs font-bold hover:bg-red-900/20 active:scale-95 transition-all">
                 🚀 緊急脱出
             </button>
         </div>
     </section>
+
+    </body>
+</html>
 
     <script>
 // --- 1. 巨大データベース（知能統合版！） ---
